--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "react-component-library",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "@Fixkey/my-test-react-component-library",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/Fixkey"
   },
-  "author": "",
+  "version": "0.0.1",
+  "description": "Testing publishing react component lib",
+  "scripts": {
+    "rollup": "rollup -c"
+  },
+  "author": "Fix Key",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.55",
     "react": "^18.2.0",
+    "rollup": "^4.10.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts"
 }
